logs/contrail-api-cli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/contrail_api_cli'...
Listing './lib/python3.5/site-packages/contrail_api_cli/commands'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas/1.10'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas/2.21'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas/3.0'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas/3.1'...
Listing './lib/python3.5/site-packages/contrail_api_cli/schemas/3.2'...
Listing './lib/python3.5/site-packages/contrail_api_cli/tests'...
Listing './lib/python3.5/site-packages/contrail_api_cli-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/datrie-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/keystoneauth1'...
Listing './lib/python3.5/site-packages/keystoneauth1/access'...
Listing './lib/python3.5/site-packages/keystoneauth1/exceptions'...
Listing './lib/python3.5/site-packages/keystoneauth1/extras'...
Listing './lib/python3.5/site-packages/keystoneauth1/extras/_saml2'...
Listing './lib/python3.5/site-packages/keystoneauth1/extras/_saml2/v3'...
Listing './lib/python3.5/site-packages/keystoneauth1/extras/kerberos'...
Listing './lib/python3.5/site-packages/keystoneauth1/extras/oauth1'...
Listing './lib/python3.5/site-packages/keystoneauth1/fixture'...
Listing './lib/python3.5/site-packages/keystoneauth1/hacking'...
Listing './lib/python3.5/site-packages/keystoneauth1/identity'...
Listing './lib/python3.5/site-packages/keystoneauth1/identity/generic'...
Listing './lib/python3.5/site-packages/keystoneauth1/identity/v3'...
Listing './lib/python3.5/site-packages/keystoneauth1/loading'...
Listing './lib/python3.5/site-packages/keystoneauth1/loading/_plugins'...
Listing './lib/python3.5/site-packages/keystoneauth1/loading/_plugins/identity'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/access'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/data'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/exceptions'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/kerberos'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/oauth1'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/saml2'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/saml2/examples'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/saml2/examples/xml'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/saml2/fixtures'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/extras/saml2/fixtures/templates'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/identity'...
Listing './lib/python3.5/site-packages/keystoneauth1/tests/unit/loading'...
Listing './lib/python3.5/site-packages/keystoneauth1-3.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
